fixed z-index problems in navbar component

--- a/src/assets/scss/login/tarocco-login.css
+++ b/src/assets/scss/login/tarocco-login.css
@@ -29,3 +29,8 @@ button.button.is-primary:hover {
     border: 1px solid black;
     color: black;
 }
+
+
+.t-stat-margin {
+    margin-top: 50px;
+}
