--- a/src/assets/scss/navbar/tarocco-navbar.css
+++ b/src/assets/scss/navbar/tarocco-navbar.css
@@ -1,8 +1,5 @@
 .navbar {
     box-shadow: 0px 10px 10px grey;
-    position: fixed;
-    top: 0px;
-    overflow:hidden;
 }
 
 .tarocco-title {
@@ -39,7 +36,8 @@
 }
 
 .dropdown {
-    overflow: none;
+    position: relative;
+    
 }
 
 .dropdown-content {
@@ -48,12 +46,14 @@
     font-family: 'Ubuntu', sans-serif;
     font-weight: bold;
     display:block;
-    overflow: none;
+    position: relative;
+    
+    
 }
 
 .dropdown-content a {
     padding: 5px;
-    overflow: none;
+   
 }
 
 
