--- a/src/assets/scss/scoreboard/tarocco-scoreboard.css
+++ b/src/assets/scss/scoreboard/tarocco-scoreboard.css
@@ -11,12 +11,13 @@
 }
 
 nav.navbar {
-    overflow: hidden;
+    
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 9;
 }
+
 
 .scoreboard-scale-viewport {
     overflow: hidden;
